tokenController.js updated
